--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -12,10 +12,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: install
+      - name: lint and test
         run: |
           npm install
-          npm install -g firebase-tools
+          npm run lint
+          npm run test
       - name: lint and test
         run: |
           npm run lint
