--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -12,6 +12,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+      - name: install
+        run: |
+          npm install
+          npm install -g firebase-tools
       - name: lint and test
         run: |
           npm run lint
