--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -16,11 +16,14 @@ jobs:
         run: |
           npm install
           npm install -g firebase-tools
+          working-directory: ./sk32
       - name: lint and test
         run: |
           npm run lint
           npm run test
+        working-directory: ./sk32
       - run: npm run build:prod
+        working-directory: ./sk32
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
