--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -16,14 +16,14 @@ jobs:
         run: |
           npm install
           npm install -g firebase-tools
-          working-directory: ./sk32
+        working-directory: /home/runner/work/sk32 # ここで絶対パスに変更
       - name: lint and test
         run: |
           npm run lint
-          npm run test
-        working-directory: ./sk32
+          npm test
+        working-directory: /home/runner/work/sk32 # 同様に修正
       - run: npm run build:prod
-        working-directory: ./sk32
+        working-directory: /home/runner/work/sk32 # 同様に修正
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
