--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -21,14 +21,14 @@ jobs:
         run: |
           npm run lint
           npm test
-        working-directory: ./app # 作業ディレクトリを指定
+        working-directory: app # 作業ディレクトリを指定
       - run: npm run build:prod
-        working-directory: ./app # 作業ディレクトリを指定
+        working-directory: app # 作業ディレクトリを指定
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SK32_APP }}
           channelId: live
           projectId: sk32-app
-          working-directory: ./app # 作業ディレクトリを指定
+          working-directory: app # 作業ディレクトリを指定
 
