--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           npm install
           npm install -g firebase-tools
-        working-directory: ./app # この行で作業ディレクトリを指定
+        working-directory: app # この行で作業ディレクトリを指定
       - name: lint and test
         run: |
           npm run lint
