--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -15,15 +15,20 @@ jobs:
       - name: install
         run: |
           npm install
-          npm install -g firebase-tools
-        working-directory: /home/runner/work/sk32/app # ここで絶対パスに変更
+          npm install -g firebase-tools]
+          ls -la /home/runner/work/sk32/
+          working-directory: ./sk32
       - name: lint and test
         run: |
           npm run lint
-          npm test
-        working-directory: /home/runner/work/sk32/app # 同様に修正
+          npm run test
+        working-directory: ./sk32
+      - name: List repository contents
+        run: |
+          ls -la /home/runner/work/sk32/
+
       - run: npm run build:prod
-        working-directory: /home/runner/work/sk32/app # 同様に修正
+        working-directory: ./sk32
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
